# fast-resume

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build_binary.py  entry_point.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-binaries.yml  ci.yml  workflow.yml
docs/: development.md  how-it-works.md  installation.md  usage.md
python/fast_resume.data/scripts/: fast-resume  fast-resume.cmd
src/: cache.rs  config.rs  index.rs  lib.rs  main.rs  model.rs  query.rs  refresh.rs  scan.rs  search.rs  settings.rs  stats.rs  tui.rs
src/adapters/: antigravity.rs  claude.rs  codex.rs  copilot_cli.rs  copilot_vscode.rs  crush.rs  cursor.rs  gemini.rs  grok.rs  kimi.rs  mod.rs  opencode.rs  pi.rs  shared.rs  vibe.rs
src/fast_resume/: __init__.py  cli.py  config.py  index.py  logging_config.py  search.py  settings.py  tui.py  update.py
src/fast_resume/adapters/: __init__.py  base.py  claude.py  codex.py  copilot.py  copilot_vscode.py  crush.py  (+3 more)
src/index/: document.rs  queries.rs  schema.rs  stats.rs
src/tui/: images.rs  input.rs  layout.rs  preview.rs  render.rs  state.rs  text.rs
tests/: cli.rs  conftest.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_copilot_adapter.py  test_copilot_vscode_adapter.py  test_crush_adapter.py  test_cursor_adapter.py  test_error_handling.py  test_index.py  test_integration.py  test_logging_config.py  test_opencode_adapter.py  test_search.py  test_settings.py  test_thread_safety.py  test_tui.py  test_update.py  test_vibe_adapter.py
(+6 files in other folders)
