[package]
name = "fast-resume"
version = "1.18.0"
edition = "2024"
description = "Fast fuzzy finder for coding agent session history"
license = "MIT"

[[bin]]
name = "fr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1.20"
ratatui = { version = "0.30.1", features = ["crossterm"] }
ratatui-image = { version = "11.0.5", default-features = false, features = ["crossterm"] }
rayon = "1.10"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.26.1"
unicode-width = "0.2"
url = "2.5"
walkdir = "2.5"

[dev-dependencies]
chrono-tz = "0.10"
tempfile = "3.15"
